examples/test/testpolicy11957.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11957
  namespace: namespace216
spec:
  podSelector:
    matchLabels:
      key17: value27
      key38: value4
      key35: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value26
          key36: value24
          key17: value28
